2008-08-15  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #6574: Template nextlevel with size=3 & allowed = 1 (Thanks to Georg Ringer)

2008-08-14  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9061: felogin - recursive storage pids in TypoScript (Thanks to Steffen Kamper)
	* Fixed bug #9095: xhtml in the backend by default (Thanks to Christian Kuhn)

2008-08-14  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9167: Feature: Mark extension as write protected (together with Steffen Kamper)

2008-08-12  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9063: Feature: Make Position of Editpanel more flexible

2008-08-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #8988: htmlArea RTE: Pasting text from MS Word to Firefox 3 brings a lot of garbage
	* Follow-up for issue #8799: htmlArea RTE: correction to two path settings

2008-08-12  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9060: Wrong alert text in Constant editor

2008-08-11  Benjamin Mack  <benni@typo3.org>

	* Fixed #8259: Cleanup: Call to t3lib_div::devLog() without key (Thanks to Francois Suter)

2008-08-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up for issue #8673: htmlArea RTE drag n drop tab of image insertion not functional
	* Follow-up for issue #8717: Add suggested doc extension to htmlArea RTE ext_emconf.php
	* Fixed bug #8996: htmlArea RTE: link to file not updated when changing case in file name
	* Added feature #9157: htmlArea RTE EM setting for DAM becomes deprecated with DAM 1.1+
	* Follow-up on feature #9157: htmlArea RTE EM setting for DAM - correcting test on DAM version
	* Updated htmlArea RTE version to 1.8.0 for TYPO3 4.3.0 alpha

2008-08-11  Ingo Renner  <ingo@typo3.org>

	* Reverted Change from 2008-08-06 in t3lib_div leading to nonfunctional clipboard

2008-08-08  Oliver Hader  <oliver@typo3.org>

	* Added feature #9075: Add record row to recStatInfoHooks in tx_cms_layout

2008-08-08  Thomas Hempel  <thomas@typo3.org>
