@@ -132,10 +132,39 @@ class SC_browse_links {
 	 * @return	void
 	 */
 	function main()	{
-		global $BE_USER, $BACK_PATH;
 
 		$this->content = '';
 
+			// look for alternativ mountpoints
+		switch((string)$this->mode)	{
+			case 'rte':
+			case 'db':
+			case 'wizard':
+					// Setting alternative browsing mounts (ONLY local to browse_links.php this script so they stay "read-only")
+				$altMountPoints = trim($GLOBALS['BE_USER']->getTSConfigVal('options.pageTree.altElementBrowserMountPoints'));
+				if ($altMountPoints) {
+					$GLOBALS['BE_USER']->groupData['webmounts'] = implode(',', array_unique(t3lib_div::intExplode(',', $altMountPoints)));
+					$GLOBALS['WEBMOUNTS'] = $GLOBALS['BE_USER']->returnWebmounts();
+					$browser_readOnly = true;
+				}
+			break;
+			case 'file':
+			case 'filedrag':
+			case 'folder':
+					// Setting alternative browsing mounts (ONLY local to browse_links.php this script so they stay "read-only")
+				$altMountPoints = trim($GLOBALS['BE_USER']->getTSConfigVal('options.folderTree.altElementBrowserMountPoints'));
+				if ($altMountPoints) {
+					$altMountPoints = t3lib_div::trimExplode(',', $altMountPoints);
+					foreach($altMountPoints as $filePathRelativeToFileadmindir)	{
+						$GLOBALS['BE_USER']->addFileMount('', $filePathRelativeToFileadmindir, $filePathRelativeToFileadmindir, 1, 0);
+					}
+					$GLOBALS['FILEMOUNTS'] = $GLOBALS['BE_USER']->returnFilemounts();
+					$browser_readOnly = true;
+				}
+			break;
+		}
+			
+			
 			// render type by user func
 		$browserRendered = false;
 		if (is_array ($GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['typo3/browse_links.php']['browserRendering'])) {
@@ -156,40 +185,15 @@ class SC_browse_links {
 
 			$this->browser = t3lib_div::makeInstance('browse_links');
 			$this->browser->init();
-
-			$modData = $BE_USER->getModuleData('browse_links.php','ses');
-			list($modData, $store) = $this->browser->processSessionData($modData);
-			$BE_USER->pushModuleData('browse_links.php',$modData);
-
-
-				// Output the correct content according to $this->mode
-			switch((string)$this->mode)	{
-				case 'rte':
-				case 'db':
-				case 'wizard':
-						// Setting alternative browsing mounts (ONLY local to browse_links.php this script so they stay "read-only")
-					$altMountPoints = trim($GLOBALS['BE_USER']->getTSConfigVal('options.pageTree.altElementBrowserMountPoints'));
-					if ($altMountPoints)	{
-						$BE_USER->groupData['webmounts'] = implode(',',array_unique(t3lib_div::intExplode(',',$altMountPoints)));
-						$GLOBALS['WEBMOUNTS'] = $BE_USER->returnWebmounts();
-						$this->browser->readOnly = TRUE;
-					}
-				break;
-				case 'file':
-				case 'filedrag':
-				case 'folder':
-						// Setting alternative browsing mounts (ONLY local to browse_links.php this script so they stay "read-only")
-					$altMountPoints = trim($GLOBALS['BE_USER']->getTSConfigVal('options.folderTree.altElementBrowserMountPoints'));
-					if ($altMountPoints)	{
-						$altMountPoints = t3lib_div::trimExplode(',',$altMountPoints);
-						foreach($altMountPoints as $filePathRelativeToFileadmindir)	{
-							$BE_USER->addFileMount('', $filePathRelativeToFileadmindir, $filePathRelativeToFileadmindir, 1,0);
-						}
-						$GLOBALS['FILEMOUNTS'] = $BE_USER->returnFilemounts();
-						$this->browser->readOnly = TRUE;
-					}
-				break;
+			if ($browser_readOnly) {
+				$this->browser->readOnly = true;	
 			}
+			$modData = $GLOBALS['BE_USER']->getModuleData('browse_links.php', 'ses');
+			list($modData, $store) = $this->browser->processSessionData($modData);
+			$GLOBALS['BE_USER']->pushModuleData('browse_links.php', $modData);
+
+
+			
 
 
 				// Output the correct content according to $this->mode
