@@ -1,3 +1,7 @@
+2008-08-16  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Added feature #9109: Enable altMountPoints feature in RTE element browser (Thanks to Steffen Kamper)
+
 2008-08-12  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #8988: htmlArea RTE: Pasting text from MS Word to Firefox 3 brings a lot of garbage
